@@ -1,9 +1,10 @@
-$Id: ChangeLog,v 1.69 2009/12/21 12:16:13 tho Exp $
+$Id: ChangeLog,v 1.70 2009/12/21 14:06:12 tho Exp $
 
 ChangeLog file of LibU - http://www.koanlogic.com/libu/index.html
 
 LibU X.Y.Z
-	- [config] doxy fixes (by Mickael Auger)
+	- [config] u_config_print_to_fp with brace delimiters for
+	           children records + doxy fixes (by Mickael Auger)
 
 LibU 1.4.1
 	- [missing] u_va_copy added
